Refatoração de ActionsTest List.of() para Array.asList()